// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page layout widget creation should fail AGGREGATE_CHART widget configuration validation failures when AGGREGATE_CHART configuration has invalid UUID 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "aggregateFieldMetadataId: aggregateFieldMetadataId must be a UUID",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail AGGREGATE_CHART widget configuration validation failures when AGGREGATE_CHART configuration has missing required fields 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "aggregateFieldMetadataId: aggregateFieldMetadataId should not be empty, aggregateFieldMetadataId must be a UUID; aggregateOperation: aggregateOperation should not be empty, aggregateOperation must be one of the following values: MIN, MAX, AVG, SUM, COUNT, COUNT_UNIQUE_VALUES, COUNT_EMPTY, COUNT_NOT_EMPTY, COUNT_TRUE, COUNT_FALSE, PERCENTAGE_EMPTY, PERCENTAGE_NOT_EMPTY",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail BAR_CHART widget configuration validation failures when HORIZONTAL BAR_CHART configuration is missing group by field 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "primaryAxisGroupByFieldMetadataId: primaryAxisGroupByFieldMetadataId should not be empty, primaryAxisGroupByFieldMetadataId must be a UUID; layout: layout should not be empty, layout must be one of the following values: VERTICAL, HORIZONTAL",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail BAR_CHART widget configuration validation failures when VERTICAL BAR_CHART configuration is missing group by field 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "primaryAxisGroupByFieldMetadataId: primaryAxisGroupByFieldMetadataId should not be empty, primaryAxisGroupByFieldMetadataId must be a UUID; layout: layout should not be empty, layout must be one of the following values: VERTICAL, HORIZONTAL",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail Edge case configuration validation failures when configuration has missing configurationType 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "Invalid configuration: missing configuration type",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail Edge case configuration validation failures when configuration has unsupported configurationType 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "Invalid configuration type: UNSUPPORTED_TYPE",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail Edge case configuration validation failures when configuration is null 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Expected non-nullable type "JSON!" not to be null.",
  "name": "GraphQLError",
}
`;

exports[`Page layout widget creation should fail General validation failures when gridPosition has invalid values 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "row must not be less than 0",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail General validation failures when pageLayoutTabId references non-existent tab 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find pageLayoutTab for given pageLayoutTabId",
  "name": "NotFoundError",
}
`;

exports[`Page layout widget creation should fail General validation failures when title is missing 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Field "title" of required type "String!" was not provided.",
  "name": "GraphQLError",
}
`;

exports[`Page layout widget creation should fail IFRAME widget configuration validation failures when IFRAME configuration has empty URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "url: url must be a URL address",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail IFRAME widget configuration validation failures when IFRAME configuration has invalid URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "url: url must be a URL address",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail STANDALONE_RICH_TEXT widget configuration validation failures when STANDALONE_RICH_TEXT configuration has missing body 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "body: body should not be empty",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail STANDALONE_RICH_TEXT widget configuration validation failures when STANDALONE_RICH_TEXT configuration has wrong body type 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "Invalid page layout widget data.",
  },
  "message": "body: nested property body must be either object or array",
  "name": "UserInputError",
}
`;
